[gd_scene load_steps=14 format=3 uid="uid://d5yq7oke0bkt"]

[ext_resource type="Script" path="res://game/ui/levellist/level_list.gd" id="1_dr0k1"]
[ext_resource type="Texture2D" uid="uid://cdws0ye30irug" path="res://assets/backgrounds/Green.png" id="2_m1gy4"]
[ext_resource type="Texture2D" uid="uid://d7ixgc2u3gbg" path="res://assets/bug/8 - Roach_Running (32 x 32).png" id="3_n3fho"]
[ext_resource type="Texture2D" uid="uid://bscl7rtbe1tkt" path="res://icon.png" id="4_1kfxl"]
[ext_resource type="LabelSettings" uid="uid://dps0s4yp4npgy" path="res://assets/themes/font_title.tres" id="5_l5or7"]
[ext_resource type="Texture2D" uid="uid://cd7hpockfkkp1" path="res://assets/player/nerd-single.png" id="6_ftjmo"]
[ext_resource type="FontFile" uid="uid://dxbj0fmabafpp" path="res://assets/fonts/ARCADECLASSIC.TTF" id="7_5o6jg"]
[ext_resource type="Theme" uid="uid://k1t7meq0f8h4" path="res://assets/themes/officerun.tres" id="8_3uem2"]

[sub_resource type="Animation" id="Animation_27xon"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dxj37"]
resource_name = "animate_bug"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_08a4u"]
_data = {
"RESET": SubResource("Animation_27xon"),
"animate_bug": SubResource("Animation_dxj37")
}

[sub_resource type="LabelSettings" id="LabelSettings_4poyl"]
font = ExtResource("7_5o6jg")
font_size = 30
font_color = Color(0.952941, 0.713726, 0.0823529, 1)
outline_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
shadow_size = 2
shadow_color = Color(0.0666667, 0.0666667, 0.0666667, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_acdcp"]

[node name="LevelList" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_3uem2")
script = ExtResource("1_dr0k1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_m1gy4")
expand_mode = 2
stretch_mode = 1

[node name="Mainscreen" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="VB" type="VBoxContainer" parent="Mainscreen"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Mainscreen/VB"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Mainscreen/VB/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 0
theme_override_constants/margin_bottom = 0

[node name="Container" type="Control" parent="Mainscreen/VB/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Sprite2D" type="Sprite2D" parent="Mainscreen/VB/HBoxContainer/MarginContainer/Container"]
position = Vector2(32, 16)
scale = Vector2(2, 2)
texture = ExtResource("3_n3fho")
hframes = 2

[node name="Icon" type="TextureRect" parent="Mainscreen/VB/HBoxContainer/MarginContainer"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("4_1kfxl")
stretch_mode = 4

[node name="icon_animation" type="AnimationPlayer" parent="Mainscreen/VB/HBoxContainer/MarginContainer"]
libraries = {
"": SubResource("AnimationLibrary_08a4u")
}
autoplay = "animate_bug"

[node name="LabelTitle" type="Label" parent="Mainscreen/VB/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Office Run"
label_settings = ExtResource("5_l5or7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Mainscreen/VB/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 9

[node name="TextureRect" type="TextureRect" parent="Mainscreen/VB/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("6_ftjmo")
stretch_mode = 3

[node name="Container" type="Control" parent="Mainscreen/VB/HBoxContainer/MarginContainer2"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Sprite2D" type="Sprite2D" parent="Mainscreen/VB/HBoxContainer/MarginContainer2/Container"]
position = Vector2(30, 30)
texture = ExtResource("6_ftjmo")
hframes = 2

[node name="Icon" type="TextureRect" parent="Mainscreen/VB/HBoxContainer/MarginContainer2"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("4_1kfxl")
stretch_mode = 4

[node name="icon_animation" type="AnimationPlayer" parent="Mainscreen/VB/HBoxContainer/MarginContainer2"]
libraries = {
"": SubResource("AnimationLibrary_08a4u")
}
autoplay = "animate_bug"

[node name="LevelsLabel" type="Label" parent="Mainscreen/VB"]
layout_mode = 2
size_flags_horizontal = 4
text = "Levels"
label_settings = SubResource("LabelSettings_4poyl")

[node name="-spacer-" type="Label" parent="Mainscreen/VB"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Mainscreen/VB"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_acdcp")
follow_focus = true

[node name="list" type="VBoxContainer" parent="Mainscreen/VB/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme = ExtResource("8_3uem2")

[node name="CloseButton" type="Button" parent="Mainscreen/VB"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("8_3uem2")
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
text = "MENU_LABEL_RETURN_MAIN"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Mainscreen/VB/CloseButton" to="." method="_on_close_button_pressed"]
